tests/base/invalid/SetComprehension_CompileFail_3.whiley
void System::main([string] args):
    xs = {1,2,3}
    zs = { x | x ∈ zs }
    this.out.println(str(xs))
    this.out.println(str(zs))
